load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "io_bazel_rules_go",
    integrity = "sha256-M6zErg9wUC20uJPJ/B3Xqb+ZjCPn/yxFF3QdQEmpdvg=",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/rules_go/releases/download/v0.48.0/rules_go-v0.48.0.zip",
        "https://github.com/bazelbuild/rules_go/releases/download/v0.48.0/rules_go-v0.48.0.zip",
    ],
)

http_archive(
    name = "bazel_gazelle",
    # integrity = "sha256-12v3pg/YsFBEQJDfooN6Tq+YKeEWVhjuNdzspcvfWNU=",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-gazelle/releases/download/v0.38.0/bazel-gazelle-v0.38.0.tar.gz",
        "https://github.com/bazelbuild/bazel-gazelle/releases/download/v0.38.0/bazel-gazelle-v0.38.0.tar.gz",
    ],
)

load("@bazel_gazelle//:deps.bzl", "gazelle_dependencies")
# load("@bazel_gazelle//:def.bzl", "gazelle_test")

load("@io_bazel_rules_go//go:deps.bzl", "go_register_toolchains", "go_rules_dependencies")

############################################################
# Define your own dependencies here using go_repository.
# Else, dependencies declared by rules_go/gazelle will be used.
# The first declaration of an external repository "wins".
############################################################

load("//:deps.bzl", "go_dependencies")

# gazelle:repository_macro deps.bzl%go_dependencies
go_dependencies()

go_rules_dependencies()

go_register_toolchains(version = "1.22.3")

gazelle_dependencies(go_repository_default_config = "//:WORKSPACE.bazel")

# load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# http_archive(
#     name = "io_bazel_rules_go",
#     sha256 = "d93ef02f1e72c82d8bb3d5169519b36167b33cf68c252525e3b9d3d5dd143de7",
#     urls = [
#         "https://mirror.bazel.build/github.com/bazelbuild/rules_go/releases/download/v0.49.0/rules_go-v0.49.0.zip",
#         "https://github.com/bazelbuild/rules_go/releases/download/v0.49.0/rules_go-v0.49.0.zip",
#     ],
# )

# load("@io_bazel_rules_go//go:deps.bzl", "go_register_toolchains", "go_rules_dependencies")

# go_rules_dependencies()

# go_register_toolchains(version = "1.22.5")

# # # WORKSPACE

# # load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# # # Go rules for Bazel
# # http_archive(
# #     name = "go_rules",
# #     urls = ["https://github.com/bazelbuild/rules_go/releases/download/v0.49.0/rules_go-v0.49.0.tar.gz"],
# #     strip_prefix = "rules_go-0.49.0",
# # )

# # load("@go_rules//go:deps.bzl", "go_rules_dependencies")
# # go_rules_dependencies()

# # # Go module support
# # http_archive(
# #     name = "bazel_gazelle",
# #     urls = ["https://github.com/bazelbuild/bazel-gazelle/releases/download/v0.27.0/bazel_gazelle-v0.27.0.tar.gz"],
# #     strip_prefix = "bazel_gazelle-0.27.0",
# # )

# # load("@bazel_gazelle//:deps.bzl", "gazelle_dependencies")
# # gazelle_dependencies()

# # # Optional: Use Gazelle to auto-generate BUILD files for Go code.
# # load("@bazel_gazelle//:def.bzl", "gazelle")

# # gazelle(name = "gazelle")
